--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,12 @@
-<h2>About </h2>
-<p>
-    This is the about page I just created using TDD!
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>About | Rock Forest Labs</title>
+    </head>
+    <body>
+        <h2>About </h2>
+        <p>
+            This is the about page I just created using TDD!
+        </p>
+    </body>
+</html>
