--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,12 @@
-<h2>Help</h2>
-
-<p>
-    Get help on the Ruby on Rails Tutorial!
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Help | Rock Forest Labs</title>
+    </head>
+    <body>
+        <h2>Help Page</h2>
+        <p>
+           If you need some, get some here ~ This is the home page for the <a href="http://www.railstutorial.org"> Ruby on Rails Tutorials</a> sample application!
+        </p>
+    </body>
+</html>
