--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,14 @@
-<h2>Sample App</h2>
-<p>
-    This is the home page for the <a href="http://www.railstutorial.org"> Ruby on Rails Tutorials</a> sample application!
-</p>
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home | Rock Forest Labs</title>
+    </head>
+    <body>
+        <h2>Home Page</h2>
+        <p>
+            This is the home page for the <a href="http://www.railstutorial.org"> Ruby on Rails Tutorials</a> sample application!
+        </p>
+    </body>
+</html>
