--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>About | Rock Forest Labs</title>
-    </head>
-    <body>
-        <h2>About </h2>
-        <p>
-            This is the about page I just created using TDD!
-        </p>
-    </body>
-</html>
+<% provide(:title, "About" ) %>
+
+<h2>About </h2>
+  <p>
+    This is the about page I just created using TDD!
+  </p>
