--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,5 @@
-
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Home | Rock Forest Labs</title>
-    </head>
-    <body>
-        <h2>Home Page</h2>
-        <p>
-            This is the home page for the <a href="http://www.railstutorial.org"> Ruby on Rails Tutorials</a> sample application!
-        </p>
-    </body>
-</html>
+<% provide(:title, "Home") %>
+<h2>Home Page</h2>
+<p>
+  This is the home page for the <a href="http://www.railstutorial.org"> Ruby on Rails Tutorials</a> sample application!
+</p>
